<resources>
    <string name="app_name">Nimbus</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>

    <string name="day">day</string>
    <string name="pressure">Pressure</string>
    <string name="wind">Wind</string>
    <string name="humidity">Humidity</string>
    <string name="enter_search_place">Search places...</string>
    <string name="updated_at">UPDATED AT</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="clear_sunny">Clear, Sunny</string>
    <string name="mostly_clear">Mostly Clear</string>
    <string name="partly_cloudy">Partly Cloudy</string>
    <string name="mostly_cloudy">Mostly Cloudy</string>
    <string name="cloudy">Cloudy</string>
    <string name="fog">Fog</string>
    <string name="light_fog">Light Fog</string>
    <string name="drizzle">Drizzle</string>
    <string name="rain">Rain</string>
    <string name="light_rain">Light Rain</string>
    <string name="heavy_rain">Heavy Rain</string>
    <string name="snow">Snow</string>
    <string name="flurries">Flurries</string>
    <string name="light_snow">Light Snow</string>
    <string name="heavy_snow">Heavy Snow</string>
    <string name="freezing_drizzle">Freezing Drizzle</string>
    <string name="freezing_rain">Freezing Rain</string>
    <string name="light_freezing_rain">Light Freezing Rain</string>
    <string name="heavy_freezing_rain">Heavy Freezing Rain</string>
    <string name="ice_pellets">Ice Pellets</string>
    <string name="heavy_ice_pellets">Heavy Ice Pellets</string>
    <string name="light_ice_pellets">Light Ice Pellets</string>
    <string name="thunderstorm">Thunderstorm</string>
    <string name="unknown">Unknown</string>
    <string name="hourly_forecast">Hourly forecast</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="more">More</string>
    <string name="expect_hot_conditions_with_temperatures_ranging_from">"Expect hot conditions with temperatures ranging from "</string>
    <string name="high_humidity_around">"High humidity around "</string>
    <string name="will_make_it_feel_even_warmer">% will make it feel even warmer. </string>
    <string name="the_uv_index_will_be_very_high">The UV index will be very high (</string>
    <string name="so_remember_to_use_sun_protection">), so remember to use sun protection. </string>
    <string name="there_is_a">"There is a "</string>
    <string name="chance_of_rain_so_keep_an_umbrella_handy">"% chance of rain, so keep an umbrella handy. "</string>
    <string name="the_chance_of_rain_is_low_at">"The chance of rain is low at "</string>
    <string name="winds_will_be_around">" Winds will be around "</string>
    <string name="offering_slight_relief_from_the_heat">" , offering slight relief from the heat. "</string>
    <string name="daily_summary">Daily Summary</string>
    <string name="to">" to "</string>
    <string name="settings">Settings</string>
    <string name="units">Units</string>
    <string name="temperature_unit">Temperature unit</string>
    <string name="wind_unit">Wind Unit</string>
    <string name="pressure_unit">Pressure Unit</string>
    <string name="providers">Providers</string>
    <string name="weather_data">Weather data</string>
</resources>