<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.optlab.nimbus.ui.viewmodel.WeaklyForecastViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/magnolia"
        android:orientation="vertical">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/tb"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="320dp"
            android:layout_marginStart="@dimen/spacing_large"
            android:layout_marginTop="@dimen/spacing_large"
            android:layout_marginEnd="@dimen/spacing_large"
            android:background="@drawable/bg_light_gradient_20dp">

            <ImageView
                android:id="@+id/iv_icon"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginStart="@dimen/spacing_large"
                android:layout_marginTop="@dimen/spacing_large"
                android:importantForAccessibility="no"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:weather_icon="@{viewModel.weakly.first.weatherIcon}" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="@dimen/spacing_mxlarge"
                app:layout_constraintBottom_toBottomOf="@id/iv_icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/iv_icon"
                app:layout_constraintTop_toTopOf="@id/iv_icon">

                <TextView
                    android:id="@+id/tv_day"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tomorrow"
                    android:textAppearance="@style/TextAppearance.Material3.HeadlineSmall"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_temperature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.Material3.DisplayLarge"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toTopOf="@id/tv_description"
                    app:layout_constraintStart_toStartOf="@id/tv_day"
                    app:layout_constraintTop_toBottomOf="@id/tv_day"
                    app:temperature="@{viewModel.weakly.first.temperatureMax}"
                    app:unit="@{viewModel.temperatureUnit}" />

                <TextView
                    android:id="@+id/tv_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toStartOf="@id/tv_temperature"
                    app:layout_constraintTop_toBottomOf="@id/tv_temperature"
                    app:text_resource="@{viewModel.weakly.first.weatherDescription}" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:baselineAligned="false"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_icon">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.33"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/spacing_xxlarge"
                        android:layout_height="@dimen/spacing_xxlarge"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_pressure" />

                    <TextView
                        android:id="@+id/tv_rain_percentage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                        android:textColor="@color/white"
                        app:pressure="@{viewModel.weakly.first.pressure}"
                        app:unit="@{viewModel.pressureUnit}" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pressure"
                        android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                        android:textColor="@color/white" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.33"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/spacing_xxlarge"
                        android:layout_height="@dimen/spacing_xxlarge"
                        android:importantForAccessibility="no"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_wind" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                        android:textColor="@color/white"
                        app:unit="@{viewModel.windSpeedUnit}"
                        app:wind_speed="@{viewModel.weakly.first.windSpeed}" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/wind"
                        android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                        android:textColor="@color/white" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.33"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/spacing_xxlarge"
                        android:layout_height="@dimen/spacing_xxlarge"
                        android:importantForAccessibility="no"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_humidity" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                        android:textColor="@color/white"
                        app:humidity="@{viewModel.weakly.first.humidity}" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/humidity"
                        android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                        android:textColor="@color/white" />

                </LinearLayout>

            </LinearLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:importantForAccessibility="no"
                android:src="@drawable/large_white_circle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_daily_weather"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/spacing_middle"
            android:layout_marginTop="@dimen/spacing_xlarge"
            android:layout_marginEnd="@dimen/spacing_middle"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

    </LinearLayout>

</layout>