<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.optlab.nimbus.ui.viewmodel.CurrentWeatherViewModel" />

        <variable
            name="userPrefs"
            type="com.optlab.nimbus.data.preferences.UserPreferencesManager" />

        <variable
            name="fragment"
            type="com.optlab.nimbus.ui.view.HomeFragment" />

    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/magnolia"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/mtb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:navigationIcon="@drawable/ic_menu"
                app:navigationIconTint="@color/persianIndigo"
                app:subtitleTextColor="@color/persianIndigo"
                app:titleTextColor="@color/persianIndigo" />

            <TextView
                android:id="@+id/tv_date_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_large"
                android:textAppearance="@style/TextAppearance.Material3.TitleSmall"
                android:textColor="@color/persianIndigo"
                app:day_time="@{viewModel.current.first.date}" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/spacing_large"
                    android:layout_marginTop="@dimen/spacing_xmedium"
                    android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                    android:textColor="@color/persianIndigo"
                    app:text_resource="@{viewModel.current.first.weatherDescription}" />

                <ImageView
                    android:id="@+id/iv_icon"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/spacing_medium"
                    android:importantForAccessibility="no"
                    app:weather_icon="@{viewModel.current.first.weatherIcon}" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_temperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_large"
                android:layout_marginTop="@dimen/spacing_large"
                android:textAlignment="center"
                android:textColor="@color/persianIndigo"
                android:textSize="120sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:temperature="@{viewModel.current.first.temperature}"
                app:unit="@{userPrefs.getTemperatureUnit()}" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/spacing_large"
                    android:layout_marginBottom="@dimen/spacing_small"
                    android:text="@string/daily_summary"
                    android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
                    android:textColor="@color/persianIndigo"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_summary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/spacing_large"
                    android:layout_marginEnd="@dimen/spacing_large"
                    android:textAlignment="textStart"
                    android:textAppearance="@style/TextAppearance.Material3.BodySmall" />

            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_large"
                android:layout_marginTop="@dimen/spacing_mxlarge"
                android:layout_marginEnd="@dimen/spacing_large"
                android:background="@drawable/bg_light_gradient_20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.333"
                        android:background="@android:color/transparent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="@dimen/spacing_xxlarge"
                            android:layout_height="@dimen/spacing_xxlarge"
                            android:importantForAccessibility="no"
                            android:scaleType="centerCrop"
                            android:src="@drawable/ic_pressure" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                            android:textColor="@color/white"
                            android:textStyle="bold"
                            app:pressure="@{viewModel.current.first.pressure}"
                            app:unit="@{userPrefs.getPressureUnit()}" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/pressure"
                            android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                            android:textColor="@color/white" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.333"
                        android:background="@android:color/transparent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="@dimen/spacing_xxlarge"
                            android:layout_height="@dimen/spacing_xxlarge"
                            android:importantForAccessibility="no"
                            android:scaleType="centerCrop"
                            android:src="@drawable/ic_wind" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                            android:textColor="@color/white"
                            android:textStyle="bold"
                            app:unit="@{userPrefs.getWindSpeedUnit()}"
                            app:wind_speed="@{viewModel.current.first.windSpeed}" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/wind"
                            android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                            android:textColor="@color/white" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.333"
                        android:background="@android:color/transparent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="@dimen/spacing_xxlarge"
                            android:layout_height="@dimen/spacing_xxlarge"
                            android:importantForAccessibility="no"
                            android:scaleType="centerCrop"
                            android:src="@drawable/ic_humidity" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                            android:textColor="@color/white"
                            android:textStyle="bold"
                            app:humidity="@{viewModel.current.first.humidity}" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/humidity"
                            android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                            android:textColor="@color/white" />
                    </LinearLayout>

                </LinearLayout>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:importantForAccessibility="no"
                    android:src="@drawable/small_white_circle"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_large"
                android:layout_marginTop="@dimen/spacing_mxlarge"
                android:layout_marginEnd="@dimen/spacing_large"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hourly_forecast"
                    android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
                    android:textColor="@color/persianIndigo"
                    android:textStyle="bold" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/tv_more"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{fragment::onMoreTextClick}"
                    android:text="@{@string/more + ` >`}"
                    android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                    android:textColor="@color/persianIndigo"
                    android:textStyle="bold" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_hourly_weather"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/spacing_large"
                android:layout_marginTop="@dimen/spacing_small"
                android:layout_marginEnd="@dimen/spacing_large"
                android:clipToPadding="false"
                android:nestedScrollingEnabled="true"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/layout_item_hourly_weather" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</layout>